--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Books App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="somthing_wrong">Something went wrong please try again</string>
+    <string name="permission_error">Please allow permision to download</string>
 
 </resources>
